[package]
name = "delaunay-stabilization"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
itertools = "0.10.3"
# math
glam = "0.17.3"
# stable hashing
rustc-hash = "1.1.0"
# graph datastructures
petgraph = "0.6.0"
# delaunay triangulation
spade = "2.0.0"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
opt-level = 2
